Fixed paxos state loading